--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 *.native
 
 .coqdeps.d
+.Makefile.d
 Makefile.conf
 
 *.o
@@ -25,6 +26,8 @@ Makefile.conf
 *.v.d
 *.vio
 *.vo
+*.vok
+*.vos
 .coq-native/
 .csdp.cache
 .lia.cache
